Wed Mar 23 10:45:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c: more work on the flow
	  control especially when multiple monitors use the same dnotify
	  watcher
	* python/tests/Makefile.am python/tests/flood.py: added a
	  second regression test for it.

Tue Mar 22 17:21:01 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_debugging.c server/gam_debugging.h server/gam_dnotify.c
	  server/gam_poll.c: implemented the DNotify side of the flow
	  control processing, and the associated debug.
	* python/tests/Makefile.am python/tests/flood.py: added a 
	  first regression test for it.

Tue Mar 22 15:22:05 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c server/gam_poll.h: more cleanup, prepare for
	  mode usage in kernel backend instead of just an added boolean.
	* server/gam_dnotify.c server/gam_inotify.c: converting the 
	  backends to the new modes

Tue Mar 22 14:39:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c server/gam_poll.h: cleanups,
	  a bit of code reorganization, adding function comments.

Wed Mar 16 23:01:36 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: new patch from
	  John McCutchan to adapt to the latest change in kernel interface
	  hopefully the last one.

Tue Mar 15 14:15:58 CET 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c server/gam_channel.c: portability patch for
	  Mac OS X, add #include <sys/uio.h> bug gnome #170404

Tue Mar 15 13:46:44 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in doc/gamin.html doc/news.html:
	  preparing release of 0.0.26

Tue Mar 15 13:05:54 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/gamin.html doc/news.html: typo
	* libgamin/fam.h: removed an incompatibility with SGI FAM #149822

Tue Mar 15 12:49:21 CET 2005 Daniel Veillard <veillard@redhat.com>
